--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,20 @@ button {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+input, select {
+  font-size: inherit;
+  font-family: inherit;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+
+label {
+  display: block;
+
+  input, select {
+    margin-left: 1rem;
+  }
+  
+}
